[project]
name = "quantum_pulse_calibrator"
version = "0.1.0"
description = "Quantum Trading AI Agent for Meta PyTorch Hackathon"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "pandas",
    "python-dotenv"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
